--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'California -- Gold discoveries'
 - !lcsh 'California -- History'
 - !lcc 'F850.5'
+- GITenberg
 title: "History of the State of California\r\nFrom the Period of the Conquest by Spain\
   \ to Her Occupation by the United States of America"
 url: http://www.gutenberg.org/ebooks/40503
